# codex-commons-marketplace

./: LICENSE  README.md
.agents/plugins/: marketplace.json
plugins/icon-generator/: .gitignore  .mcp.json  README.md  pyproject.toml
plugins/icon-generator/.codex-plugin/: plugin.json
plugins/icon-generator/playground/: README.md  make_master_icon.py  run_playground.sh
plugins/icon-generator/scripts/app_icon_generator/: __init__.py  active_icon.py  android.py  app_inspect.py  apple.py  cli.py  detect_project.py  icon_composer.py  image_io.py  path_filters.py  qa.py  runtime_icons.py  validate.py  web.py  workflow.py  xcode_inspect.py
plugins/icon-generator/skills/icon-generator/: SKILL.md
plugins/icon-generator/tests/: test_active_icon_v5.py  test_android_icons.py  test_apple_icons.py  test_detect_project.py  test_icon_composer.py  test_qa_and_diagnostics.py  test_runtime_icons.py  test_web_favicons.py  test_workflow_v4.py
plugins/icon-generator/tests/fixtures/android/: settings.gradle
plugins/icon-generator/tests/fixtures/android/app/src/main/: AndroidManifest.xml
plugins/icon-generator/tests/fixtures/flutter/: pubspec.yaml
plugins/icon-generator/tests/fixtures/flutter/android/: settings.gradle
plugins/icon-generator/tests/fixtures/ios/MyApp.xcodeproj/: project.pbxproj
plugins/sandbox-network-canary/: README.md
plugins/sandbox-network-canary/.codex-plugin/: plugin.json
plugins/strict-clean-canary/: README.md  package-lock.json  package.json
plugins/strict-clean-canary/.codex-plugin/: plugin.json
(+2 files in other folders)
