[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icon-generator-plugin"
version = "0.7.0"
description = "Codex plugin for generating app icon assets for iOS, macOS, Android, and web projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Marina Eremina" }
]
dependencies = [
  "Pillow>=10.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
icon-generator = "app_icon_generator.cli:main"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
